# dbt_decidim

./: .env.example  .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml
macros/: html_cleaning.sql  lang.sql  table_exists.sql
models/: blog_posts.sql  budgets.sql  budgets_projects.sql  categorizations.sql  comments.sql  components.sql  debates.sql  endorsements.sql  forms.sql  forms_answers.sql  initiatives.sql  initiatives_votes.sql  meetings.sql  organization.sql  organizations.sql  proposals.sql  proposals_votes.sql  schema.yml
models/marts/decidim/: budgets.sql  budgets_projects.sql  comments.sql  components.sql  debates.sql  endorsements.sql  followings.sql  forms.sql  forms_answers.sql  initiatives.sql  meetings.sql  organizations.sql  participations.sql  projects_votes.sql  proposals.sql  users.sql
models/staging/decidim/: src_decidim.yml  stg_accountability_results.sql  stg_assemblies.sql  stg_attachments.sql  stg_blogs_posts.sql  stg_budgets.sql  stg_budgets_line_items.sql  stg_budgets_orders.sql  stg_budgets_projects.sql  stg_categories.sql  stg_categorizations.sql  stg_comments.sql  stg_components.sql  stg_conferences.sql  stg_debates.sql  stg_endorsements.sql  stg_followings.sql  stg_forms.sql  stg_initiatives.sql  stg_meetings.sql  stg_moderations.sql  stg_organizations.sql  stg_participatory_processes.sql  stg_proposal_votes.sql  stg_proposals.sql  stg_proposals_collaborative_drafts.sql  stg_surveys.sql  stg_users.sql
